addons/registry/manifests/k2s-registry-nodeport.yaml
# SPDX-FileCopyrightText: © 2023 Siemens Healthcare GmbH
#
# SPDX-License-Identifier: MIT
---
apiVersion: v1
kind: Service
metadata:
  name: k2s-registry
  namespace: registry
spec:
  type: NodePort
  selector:
    app: registry
  ports:
  - port: 80
    targetPort: 5000
