addons/registry/manifests/k2s-registry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: k2s-registry-pod
  namespace: registry
  labels:
    app: registry
spec:
  containers:
  - name: registry
    image: public.ecr.aws/docker/library/registry:2
    volumeMounts:
    - name: repo-vol
      mountPath: "/var/lib/registry"
    - name: config-vol
      mountPath: /etc/docker/registry
    # - name: certs-vol
    #   mountPath: "/certs"
    #   readOnly: true
    - name: auth-vol
      mountPath: "/auth"
      readOnly: true
  volumes:
  - name: repo-vol
    persistentVolumeClaim:
      claimName: k2s-repo-pvc
  # - name: certs-vol
  #   secret:
  #     secretName: certs-secret
  - name: auth-vol
    secret:
      secretName: auth-secret
  - name: config-vol
    configMap:
      name: registry-config
---
apiVersion: v1
kind: Service
metadata:
  name: k2s-registry
  namespace: registry
spec:
  selector:
    app: registry
  ports:
  - port: 5000
    targetPort: 5000
