addons/registry/manifests/k2s-registry-nginx-ingress.yaml
# SPDX-FileCopyrightText: © 2023 Siemens Healthcare GmbH
#
# SPDX-License-Identifier: MIT

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: registry
  namespace: registry
spec:
  ingressClassName: nginx
  rules:
    - host: k2s-registry.local
      http:
        paths:
        - backend:
            service:
              name: k2s-registry
              port: 
                number: 5000
          pathType: Prefix
          path: /
