addons/registry/manifests/k2s-registry-traefik-ingress.yaml
# SPDX-FileCopyrightText: © 2024 Siemens Healthineers AG
#
# SPDX-License-Identifier: MIT

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: registry-ingressroute
  namespace: registry
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`k2s-registry.local`)
      kind: Rule
      services:
        - name: k2s-registry
          namespace: registry
          port: 5000
